2013-05-22  Glenn Morris  <rgm@gnu.org>

	* ede/speedbar.el (ede-file-find, ede-tag-find):
	* semantic/sb.el (semantic-sb-token-jump):
	Use dframe-maybee-jump-to-attached-frame rather than speedbar- alias.

2013-05-15  Glenn Morris  <rgm@gnu.org>

	* semantic/symref/list.el (semantic-symref-auto-expand-results)
	(semantic-symref-results-mode-hook)
	(semantic-symref-results-summary-function): Fix :group.

2013-05-14  Glenn Morris  <rgm@gnu.org>

	* ede/simple.el, semantic/java.el: Set generated-autoload-load-name.

2013-05-11  Glenn Morris  <rgm@gnu.org>

	* ede/project-am.el, semantic/db-ebrowse.el, semantic/grammar.el:
	* semantic/sb.el, semantic/bovine/grammar.el, semantic/wisent/comp.el:
	* semantic/wisent/grammar.el, semantic/wisent/wisent.el:
	* srecode/fields.el: Set generated-autoload-load-name (for cus-load).

	* ede/locate.el (cedet-cscope-version-check)
	(cedet-cscope-support-for-directory):
	* semantic/grammar.el (semantic-grammar-wy--install-parser):
	Fix declarations.

	* ede/project-am.el (project-am-compile-project-command): Fix :type.

2013-05-09  Glenn Morris  <rgm@gnu.org>

	* semantic/db-find.el (semanticdb-find-throttle-custom-list):
	Fix value.

2013-04-27  David Engster  <deng@randomsample.de>

	* semantic/complete.el
	(semantic-collector-calculate-completions-raw): If
	`completionslist' is not set, refresh the cache if necessary and
	use it for completions.  This fixes the
	`semantic-collector-buffer-deep' collector (bug#14265).

2013-03-26  Leo Liu  <sdl.web@gmail.com>

	* semantic/senator.el (senator-copy-tag-to-register): Move
	register handling logic from register.el.  (Bug#14052)

2013-03-21  Eric Ludlam  <zappo@gnu.org>

	* semantic.el (navigate-menu): Yank Tag :enable. Make sure
	`senator-tag-ring' is bound.
	(semantic-parse-region-default): Stop reversing the output of
	parse-whole-stream.
	(semantic-repeat-parse-whole-stream): Append returned tags
	differently, so they come out in the right order.
