@@ -28,6 +28,8 @@
 
 ;;; Prologue
 ;;
+(declare-function semantic-parse-region "semantic"
+		  (start end &optional nonterminal depth returnonerror))
 
 ;;; Declarations
 ;;
